// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<span
  className="big-spacer-left flex-0 branch-like-navigation-toggler-container display-flex-center"
>
  <Memo(CurrentBranchLike)
    branchesEnabled={false}
    component={
      {
        "breadcrumbs": [],
        "key": "my-project",
        "name": "MyProject",
        "qualifier": "TRK",
        "qualityGate": {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": [
          {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": [],
      }
    }
    currentBranchLike={
      {
        "analysisDate": "2018-01-01",
        "excludedFromPurge": true,
        "isMain": false,
        "name": "branch-11",
      }
    }
    hasManyBranches={true}
  />
</span>
`;

exports[`should render the menu trigger if branches are enabled 1`] = `
<span
  className="big-spacer-left flex-0 branch-like-navigation-toggler-container display-flex-center dropdown"
>
  <Toggler
    onRequestClose={[Function]}
    open={false}
    overlay={
      <withRouter(Menu)
        branchLikes={
          [
            {
              "analysisDate": "2018-01-01",
              "excludedFromPurge": true,
              "isMain": false,
              "name": "branch-11",
            },
            {
              "analysisDate": "2018-01-01",
              "excludedFromPurge": true,
              "isMain": false,
              "name": "branch-1",
            },
            {
              "analysisDate": "2018-01-01",
              "excludedFromPurge": true,
              "isMain": true,
              "name": "master",
            },
            {
              "analysisDate": "2018-01-01",
              "base": "master",
              "branch": "feature/foo/bar",
              "key": "1",
              "target": "master",
              "title": "PR-1",
            },
            {
              "analysisDate": "2018-01-01",
              "excludedFromPurge": true,
              "isMain": false,
              "name": "branch-12",
            },
            {
              "analysisDate": "2018-01-01",
              "base": "master",
              "branch": "feature/foo/bar",
              "key": "2",
              "target": "master",
              "title": "PR-2",
            },
            {
              "analysisDate": "2018-01-01",
              "excludedFromPurge": true,
              "isMain": false,
              "name": "branch-3",
            },
            {
              "analysisDate": "2018-01-01",
              "excludedFromPurge": true,
              "isMain": false,
              "name": "branch-2",
            },
            {
              "analysisDate": "2018-01-01",
              "base": "master",
              "branch": "feature/foo/bar",
              "isOrphan": true,
              "key": "2",
              "target": "llb-100",
              "title": "PR-2",
            },
          ]
        }
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        currentBranchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-11",
          }
        }
        onClose={[Function]}
      />
    }
  >
    <ButtonPlain
      aria-expanded={false}
      aria-haspopup="menu"
      className="branch-like-navigation-toggler"
      onClick={[Function]}
    >
      <Memo(CurrentBranchLike)
        branchesEnabled={true}
        component={
          {
            "breadcrumbs": [],
            "key": "my-project",
            "name": "MyProject",
            "qualifier": "TRK",
            "qualityGate": {
              "isDefault": true,
              "key": "30",
              "name": "Sonar way",
            },
            "qualityProfiles": [
              {
                "deleted": false,
                "key": "my-qp",
                "language": "ts",
                "name": "Sonar way",
              },
            ],
            "tags": [],
          }
        }
        currentBranchLike={
          {
            "analysisDate": "2018-01-01",
            "excludedFromPurge": true,
            "isMain": false,
            "name": "branch-11",
          }
        }
        hasManyBranches={true}
      />
    </ButtonPlain>
  </Toggler>
</span>
`;
